fix: :lipstick: Fix align left, Page 5
Adjust styles to match left alignment of paragraphs in note section of HPP Profile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -563,7 +563,7 @@
         line-height: 25.2px;
         margin-bottom: 12px;
 
-        
+
         @media screen and (min-width: 1024px) {
             font-size: 1.375rem;
             line-height: 30.8px;
@@ -770,7 +770,7 @@
         top: 0;
         right: 50%;
         width: calc(100% + 20rem);
-        height: 100%; 
+        height: 100%;
 
         z-index: 0;
 
@@ -3830,11 +3830,11 @@
                     margin-top: 1.5rem;
                     // margin-bottom: 1rem;
                     line-height: 15.6px;
-                    padding-left: .625rem;
+                    padding-left: .3125rem;
 
                     sup {
                         top: 5px;
-                        left: 5px;
+                        left: 0;
                         position: absolute;
                     }
 
